corrected slide menu text color on mobile

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -193,6 +193,9 @@ body {
 				@media @tablet {
 					color: #fff;
 				}
+				@media @mobile {
+					color: rgba(19, 20, 24, 0.87);
+				}
 			}
 		}
 	}
